data/derived/sp14/progs/unify/prog3112.ml.out
Characters 28-48:
  wwhile (fun x -> f x = b,b);;
         ^^^^^^^^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
('a -> 'a * bool) * 'a
